fix table overflow

--- a/src/_includes/sass/base/tables.sass
+++ b/src/_includes/sass/base/tables.sass
@@ -1,8 +1,13 @@
+.table-wrapper
+    display: block
+    overflow: auto
+    width: 100%
+    
 table
     border-spacing: 0
     display: table
     border-collapse: collapse
-    overflow: auto
+    width: 100%
     td, th
         padding: 6px 13px
         border: 1px solid $epsilon
